create api to get restuarant data
